Added date of birth field

--- a/templates/index.html
+++ b/templates/index.html
@@ -49,6 +49,12 @@
             <input type="text" class="form-control" id="yourName" placeholder="Enter your name" name="name" required>
           </div>
 
+          <!-- Date of birth -->
+          <div class="form-group mb-4">
+            <label for="dateOfBirth">Your date of birth:</label>
+            <input type="date" class="form-control" id="yourName" name="dob" required>
+          </div>
+
           <!-- Name of spouse -->
           <div class="form-group mb-4">
             <label for="spouseName">Spouse's name:</label>
