--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
           <!-- Date of birth -->
           <div class="form-group mb-4">
             <label for="dateOfBirth">Your date of birth:</label>
-            <input type="date" class="form-control" id="yourName" name="dob" required>
+            <input type="date" class="form-control" id="dateOfBirth" name="dob" required>
           </div>
 
           <!-- Name of spouse -->
