Restrict image upload types to common formats

--- a/templates/index.html
+++ b/templates/index.html
@@ -82,25 +82,25 @@
           <!-- Front of license -->
           <div class="form-group mb-4">
             <label for="imgUpload1">Attach a picture of the FRONT of your driver's license:</label>
-            <input type="file" class="form-control-file" id="imgUpload1" accept="image/*, application/pdf" name="img1">
+            <input type="file" class="form-control-file" id="imgUpload1" accept="image/jpeg, image/png, image/gif, image/tiff, image/heic, application/pdf" name="img1">
           </div>
 
           <!-- Back of license -->
           <div class="form-group mb-4">
             <label for="imgUpload2">Attach a picture of the BACK of your driver's license:</label>
-            <input type="file" class="form-control-file" id="imgUpload2" accept="image/*, application/pdf" name="img2">
+            <input type="file" class="form-control-file" id="imgUpload2" accept="image/jpeg, image/png, image/gif, image/tiff, image/heic, application/pdf" name="img2">
           </div>
 
           <!-- Front of spouse's license -->
           <div class="form-group mb-4">
             <label for="imgUpload3">Attach a picture of the FRONT of your spouse's driver's license:</label>
-            <input type="file" class="form-control-file" id="imgUpload3" accept="image/*, application/pdf" name="img3">
+            <input type="file" class="form-control-file" id="imgUpload3" accept="image/jpeg, image/png, image/gif, image/tiff, image/heic, application/pdf" name="img3">
           </div>
 
           <!-- Back of spouse's license -->
           <div class="form-group mb-4">
             <label for="imgUpload4">Attach a picture of the BACK of your spouse's driver's license:</label>
-            <input type="file" class="form-control-file" id="imgUpload4" accept="image/*, application/pdf" name="img4">
+            <input type="file" class="form-control-file" id="imgUpload4" accept="image/jpeg, image/png, image/gif, image/tiff, image/heic, application/pdf" name="img4">
           </div>
       
           <!-- Submit Button -->
