Make requested changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 
         <!-- Puts the Heinberg Insurance logo at the top -->
         <div class="text-center">
-            <img src="{{ url_for('static', filename='bhins.png') }}" alt="Heinberg Major Auto Insurance" class="img-fluid mb-4" style="max-width: 100%; height: auto;">
+            <img src="{{ url_for('static', filename='Major_Auto_logo_transparent.png') }}" alt="Heinberg Major Auto Insurance" class="img-fluid mb-4" style="max-width: 100%; height: auto;">
         </div>
 
         <h5 class="mb-4">Please answer the questions below.</h5>
@@ -45,7 +45,7 @@
 
           <!-- Name -->
           <div class="form-group mb-4">
-            <label for="yourName">Your name:</label>
+            <label for="yourName">Your full name (as shown on your driver's license):</label>
             <input type="text" class="form-control" id="yourName" placeholder="Enter your name" name="name" required>
           </div>
 
@@ -57,7 +57,7 @@
 
           <!-- Name of spouse -->
           <div class="form-group mb-4">
-            <label for="spouseName">Spouse's name:</label>
+            <label for="spouseName">Spouse's full name (if applicable):</label>
             <input type="text" class="form-control" id="spouseName" placeholder="Enter your spouse's name" name="s_name">
           </div>
 
