Update spouse field

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,8 +57,8 @@
 
           <!-- Name of spouse -->
           <div class="form-group mb-4">
-            <label for="spouseName">Spouse's full name (if applicable):</label>
-            <input type="text" class="form-control" id="spouseName" placeholder="Enter your spouse's name" name="s_name">
+            <label for="spouseName">Spouse's full name and date of birth (if applicable):</label>
+            <input type="text" class="form-control" id="spouseName" placeholder="Enter your spouse's name and date of birth (MM/DD/YYYY)" name="s_name">
           </div>
 
           <!-- Address -->
