--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -22,7 +22,7 @@
 
         <!-- Puts the Heinberg Insurance logo at the top -->
         <div class="text-center">
-            <img src="{{ url_for('static', filename='bhins.png') }}" alt="Heinberg Major Auto Insurance" class="img-fluid mb-4" style="max-width: 100%; height: auto;">
+            <img src="{{ url_for('static', filename='Major_Auto_logo_transparent.png') }}" alt="Heinberg Major Auto Insurance" class="img-fluid mb-4" style="max-width: 100%; height: auto;">
         </div>
 
         <h1 class="mb-4 text-center">Thank you!</h1>
